force-app/main/default/objects/Project_Contact_Role__c/Project_Contact_Role__c.object-meta.xml
<CustomObject>
    <fullName>Project_Contact_Role__c</fullName>
    <label>Project Contact Role</label>
    <pluralLabel>Project Contact Roles</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <description>Custom object to link Contacts with a role for a specific Project</description>
    <household>false</household>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>