force-app/main/default/objects/Project_Contact_Role__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Project</referenceTo>
    <relationshipLabel>Contact Roles</relationshipLabel>
    <relationshipName>Project_Project_Contact_Roles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>